@@ -2,6 +2,7 @@ shady-skin Revision History
 ----------------------------------
 
 2016-02-22:
+- Fixed layer in plug-plex-root
 - Fixed int- and channel-selector in tvguideng-recmenu
 
 2016-02-21:
